@@ -14,6 +14,7 @@ import com.sk89q.worldedit.regions.Region;
 import me.makkuusen.timing.system.ApiUtilities;
 import me.makkuusen.timing.system.Database;
 import me.makkuusen.timing.system.LeaderboardManager;
+import me.makkuusen.timing.system.TPlayer;
 import me.makkuusen.timing.system.TimingSystem;
 import me.makkuusen.timing.system.TrackTagManager;
 import me.makkuusen.timing.system.event.Event;
@@ -26,14 +27,15 @@ import org.bukkit.inventory.ItemStack;
 
 import java.sql.SQLException;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
 public class TrackDatabase {
 
-    public static TimingSystem plugin;
     private static List<Track> tracks = new ArrayList<>();
     private static List<TrackRegion> startRegions = new ArrayList<>();
 
@@ -51,21 +53,25 @@ public class TrackDatabase {
         for (DbRow dbRow : dbRows) {
             Track rTrack = new Track(dbRow);
             tracks.add(rTrack);
-            plugin.getLogger().info("LOADING IN " + rTrack.getDisplayName());
+            TimingSystem.getPlugin().getLogger().info("LOADING IN " + rTrack.getDisplayName());
 
             loadFinishes(rTrack);
             loadAttempts(rTrack);
             loadTrackTags(rTrack);
+            loadCheckpointTimes(rTrack);
         }
     }
-    private static void loadFinishes(Track rTrack) throws SQLException{
+
+    private static void loadFinishes(Track rTrack) throws SQLException {
         //var resultFinishes = DB.getResults("SELECT * FROM `ts_finishes` WHERE ( `uuid`,`time`) IN (SELECT `uuid`, min(`time`) FROM `ts_finishes` WHERE `trackId` = " + rTrack.getId() + " AND `isRemoved` = 0 GROUP BY `uuid`) AND `trackId` = " + rTrack.getId() + " GROUP BY `uuid` ORDER BY `time` ASC, `date` ASC;");
         var resultFinishes = DB.getResults("SELECT * FROM `ts_finishes` WHERE `trackId` = " + rTrack.getId() + " AND `isRemoved` = 0;");
         for (DbRow finish : resultFinishes) {
             var uuid = finish.getString("uuid") == null ? null : UUID.fromString(finish.getString("uuid"));
             if (Database.getPlayer(uuid) != null) {
-                rTrack.addTimeTrialFinish(new TimeTrialFinish(finish));
+                var f = new TimeTrialFinish(finish);
+                rTrack.addTimeTrialFinish(f);
             }
+
         }
     }
 
@@ -82,10 +88,34 @@ public class TrackDatabase {
     private static void loadTrackTags(Track rTrack) throws SQLException {
         var tags = DB.getResults("SELECT * FROM `ts_tracks_tags` WHERE `trackId` = " + rTrack.getId() + ";");
         for (DbRow tag : tags) {
-            rTrack.addTag(tag);
+            var trackTag = TrackTagManager.getTrackTag(tag.getString("tag"));
+            if (trackTag != null) {
+                rTrack.addTag(trackTag);
+            }
         }
 
     }
+
+    private static void loadCheckpointTimes(Track rTrack) throws SQLException {
+
+        var players = rTrack.getTimeTrialFinishes().keySet();
+        for (TPlayer tPlayer : players) {
+            var finish = rTrack.getBestFinish(tPlayer);
+            if (rTrack.getDateChanged() > finish.getDate()) {
+                continue;
+            }
+            var checkpointResults = DB.getResults("SELECT * FROM `ts_finishes_checkpoints` WHERE `finishId` = " + finish.getId() + " AND `isRemoved` = 0;");
+            Map<Integer, Long> checkpointTimes = new HashMap<>();
+            if (!checkpointResults.isEmpty()) {
+                for (DbRow checkpoint : checkpointResults) {
+                    checkpointTimes.put(checkpoint.getInt("checkpointIndex"), Long.valueOf(checkpoint.getInt("time")));
+                }
+                finish.updateCheckpointTimes(checkpointTimes);
+            }
+        }
+
+    }
+
 
     private static void loadTrackRegions() throws SQLException {
         var trackRegions = DB.getResults("SELECT * FROM `ts_regions` WHERE `isRemoved` = 0;");
@@ -126,8 +156,7 @@ public class TrackDatabase {
     private static void clearUselessEndRegions() {
         for (Track track : tracks) {
             if (track.hasRegion(TrackRegion.RegionType.START) && track.hasRegion(TrackRegion.RegionType.END)) {
-                for (TrackRegion startRegion : track.getRegions(TrackRegion.RegionType.START))
-                {
+                for (TrackRegion startRegion : track.getRegions(TrackRegion.RegionType.START)) {
                     for (TrackRegion endRegion : track.getRegions(TrackRegion.RegionType.END)) {
                         if (startRegion.hasEqualBounds(endRegion)) {
                             track.removeRegion(endRegion);
@@ -164,8 +193,8 @@ public class TrackDatabase {
 
     public static void loadTags() throws SQLException {
         var trackTags = DB.getResults("SELECT * FROM `ts_tags`");
-        for (DbRow dbRow: trackTags) {
-            TrackTagManager.addTag(new TrackTag(dbRow.getString("tag")));
+        for (DbRow dbRow : trackTags) {
+            TrackTagManager.addTag(new TrackTag(dbRow));
         }
     }
 
@@ -176,13 +205,7 @@ public class TrackDatabase {
             Location leaderboard = location.clone();
             leaderboard.setY(leaderboard.getY() + 3);
             // Save the track
-            var trackId = DB.executeInsert("INSERT INTO `ts_tracks` " +
-                    "(`uuid`, `name`, `dateCreated`, `weight`, `guiItem`, `spawn`, `leaderboard`, `type`, `mode`, `toggleOpen`, `options`, `isRemoved`) " +
-                    "VALUES('" + uuid + "', " +
-                    Database.sqlString(name) + ", " + date + ", 100, " +
-                    Database.sqlString(ApiUtilities.itemToString(gui)) + ", '" + ApiUtilities.locationToString(location) + "', '" + ApiUtilities.locationToString(leaderboard) + "', " +
-                    Database.sqlString(type == null ? null : type.toString()) + "," +
-                    Database.sqlString(Track.TrackMode.TIMETRIAL.toString()) + ", 0, NULL , 0);");
+            var trackId = DB.executeInsert("INSERT INTO `ts_tracks` " + "(`uuid`, `name`, `dateCreated`, `weight`, `guiItem`, `spawn`, `leaderboard`, `type`, `mode`, `toggleOpen`, `options`, `isRemoved`) " + "VALUES('" + uuid + "', " + Database.sqlString(name) + ", " + date + ", 100, " + Database.sqlString(ApiUtilities.itemToString(gui)) + ", '" + ApiUtilities.locationToString(location) + "', '" + ApiUtilities.locationToString(leaderboard) + "', " + Database.sqlString(type == null ? null : type.toString()) + "," + Database.sqlString(Track.TrackMode.TIMETRIAL.toString()) + ", 0, NULL , 0);");
 
             var dbRow = DB.getFirstRow("SELECT * FROM `ts_tracks` WHERE `id` = " + trackId + ";");
 
@@ -202,24 +225,22 @@ public class TrackDatabase {
         String maxP = ApiUtilities.locationToString(BukkitAdapter.adapt(location.getWorld(), selection.getMaximumPoint()));
 
         if (selection instanceof Polygonal2DRegion polySelection) {
-            regionId = DB.executeInsert("INSERT INTO `ts_regions` (`trackId`, `regionIndex`, `regionType`, `regionShape`, `minP`, `maxP`, `spawn`, `isRemoved`) VALUES(" + trackId + ", " + index + ", " +
-                    Database.sqlString(type.toString()) + ", " + Database.sqlString(TrackRegion.RegionShape.POLY.toString()) + ", '" + minP + "', '" + maxP + "','" + ApiUtilities.locationToString(location) + "', 0);");
+            regionId = DB.executeInsert("INSERT INTO `ts_regions` (`trackId`, `regionIndex`, `regionType`, `regionShape`, `minP`, `maxP`, `spawn`, `isRemoved`) VALUES(" + trackId + ", " + index + ", " + Database.sqlString(type.toString()) + ", " + Database.sqlString(TrackRegion.RegionShape.POLY.toString()) + ", '" + minP + "', '" + maxP + "','" + ApiUtilities.locationToString(location) + "', 0);");
             var dbRow = DB.getFirstRow("SELECT * FROM `ts_regions` WHERE `id` = " + regionId + ";");
             for (BlockVector2 v : polySelection.getPoints()) {
-                DB.executeInsert("INSERT INTO `ts_points` (`regionId`, `x`, `z`) VALUES(" + regionId + ", " + v.getBlockX() + ", " + v.getBlockZ() + ");" );
+                DB.executeInsert("INSERT INTO `ts_points` (`regionId`, `x`, `z`) VALUES(" + regionId + ", " + v.getBlockX() + ", " + v.getBlockZ() + ");");
             }
             return new TrackPolyRegion(dbRow, polySelection.getPoints());
 
         } else {
-            regionId = DB.executeInsert("INSERT INTO `ts_regions` (`trackId`, `regionIndex`, `regionType`, `regionShape`, `minP`, `maxP`, `spawn`, `isRemoved`) VALUES(" + trackId + "," + index + ", " +
-                    Database.sqlString(type.toString()) + ", " + Database.sqlString(TrackRegion.RegionShape.CUBOID.toString()) + ", '" + minP + "', '" + maxP + "','" + ApiUtilities.locationToString(location) + "', 0);");
+            regionId = DB.executeInsert("INSERT INTO `ts_regions` (`trackId`, `regionIndex`, `regionType`, `regionShape`, `minP`, `maxP`, `spawn`, `isRemoved`) VALUES(" + trackId + "," + index + ", " + Database.sqlString(type.toString()) + ", " + Database.sqlString(TrackRegion.RegionShape.CUBOID.toString()) + ", '" + minP + "', '" + maxP + "','" + ApiUtilities.locationToString(location) + "', 0);");
             var dbRow = DB.getFirstRow("SELECT * FROM `ts_regions` WHERE `id` = " + regionId + ";");
             return new TrackCuboidRegion(dbRow);
         }
     }
 
     public static TrackLocation trackLocationNew(int trackId, int index, TrackLocation.Type type, Location location) throws SQLException {
-        DB.executeInsert("INSERT INTO `ts_locations` (`trackId`, `index`, `type`, `location`) VALUES(" + trackId +  ", "  + index + ", '" + type.name() + "', '" + ApiUtilities.locationToString(location) + "');");
+        DB.executeInsert("INSERT INTO `ts_locations` (`trackId`, `index`, `type`, `location`) VALUES(" + trackId + ", " + index + ", '" + type.name() + "', '" + ApiUtilities.locationToString(location) + "');");
         if (type == TrackLocation.Type.LEADERBOARD) {
             return new TrackLeaderboard(trackId, index, location, type);
         } else {
@@ -235,7 +256,7 @@ public class TrackDatabase {
         LeaderboardManager.removeLeaderboards(track);
         startRegions.removeIf(trackRegion -> trackRegion.getTrackId() == track.getId());
         tracks.remove(track);
-        var events = EventDatabase.getEvents().stream().filter(event -> event.getTrack() != null).filter(event -> event.getTrack().equals(track.getId())).collect(Collectors.toList());
+        var events = EventDatabase.getEvents().stream().filter(event -> event.getTrack() != null).filter(event -> event.getTrack().equals(track.getId())).toList();
         for (Event event : events) {
             EventDatabase.removeEvent(event);
         }
@@ -300,17 +321,17 @@ public class TrackDatabase {
 
     public static List<String> getTracksAsStrings() {
         List<String> tracks = new ArrayList<>();
-        getTracks().stream().forEach(track -> tracks.add(track.getCommandName()));
+        getTracks().forEach(track -> tracks.add(track.getCommandName()));
         return tracks;
     }
 
     public static List<String> getRegionsAsStrings(BukkitCommandCompletionContext c) {
         List<String> regions = new ArrayList<>();
-        var maybeTrack = plugin.playerEditingSession.get(c.getPlayer().getUniqueId());
+        var maybeTrack = TimingSystem.playerEditingSession.get(c.getPlayer().getUniqueId());
         if (maybeTrack == null) {
             return regions;
         }
-        maybeTrack.getRegions().stream().forEach(region -> regions.add(region.getRegionType().name() + "-" + region.getRegionIndex()));
+        maybeTrack.getRegions().forEach(region -> regions.add(region.getRegionType().name().toLowerCase() + "-" + region.getRegionIndex()));
 
         return regions;
     }
@@ -331,17 +352,17 @@ public class TrackDatabase {
     public static ContextResolver<TrackRegion, BukkitCommandExecutionContext> getRegionContextResolver() {
         return (c) -> {
             String region = c.popFirstArg();
-            var maybeTrack = plugin.playerEditingSession.get(c.getPlayer().getUniqueId());
+            var maybeTrack = TimingSystem.playerEditingSession.get(c.getPlayer().getUniqueId());
             if (maybeTrack != null) {
                 try {
                     String[] regionName = region.split("-");
-                    int index = Integer.valueOf(regionName[1]);
+                    int index = Integer.parseInt(regionName[1]);
                     String regionType = regionName[0];
-                    var maybeRegion = maybeTrack.getRegion(TrackRegion.RegionType.valueOf(regionType), index);
-                    if (maybeRegion.isPresent()){
+                    var maybeRegion = maybeTrack.getRegion(TrackRegion.RegionType.valueOf(regionType.toUpperCase()), index);
+                    if (maybeRegion.isPresent()) {
                         return maybeRegion.get();
                     }
-                } catch (Exception e){
+                } catch (Exception ignored) {
 
                 }
             }
@@ -349,7 +370,8 @@ public class TrackDatabase {
         };
     }
 
-    public static void unload(){
+    public static void unload() {
+        LeaderboardManager.removeAllLeaderboards();
         tracks = new ArrayList<>();
         startRegions = new ArrayList<>();
     }
